--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==2.3.2
 fpdf==1.7.2
 fpdf2==2.2.0
 opencv_contrib_python==4.9.0.80
-opencv_python==4.10.0.84
+opencv-python-headless==4.10.0.84
 Pillow==10.4.0
 pytubefix==6.6.3
 gunicorn==20.1.0
