--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ fpdf2==2.2.0
 opencv_contrib_python==4.9.0.80
 opencv_python==4.10.0.84
 Pillow==10.4.0
-pytubefix==6.6.3
+pytubefix==7.2rc2
 gunicorn==20.1.0
